[metadata]
name = authenta
version = 0.1.0
description = Python SDK for the Authenta API to detect deepfakes and manipulated media
author = Your Name
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    requests>=2.20.0

[options.packages.find]
where = src
